replaced all `Arrays#asList` with `List#of`